remove z-index and fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -48,17 +48,20 @@ html {
                 img.item-image {
                     border-radius: 0.5rem;
                     width: 100%;
-                    z-index: 1;
                     transition: 0.3s;
                 }
                 img.item-image:hover {
-                    z-index: 0;
                     opacity: 0.5;
                 }
 
                 img.view-icon {
+                    opacity: 0;
                     position: absolute;
                 }
+            }
+            .item-container:hover img.view-icon {
+                transition: 0.3s;
+                opacity: 1;
             }
 
             h1 {
